--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ gems:
 # Site settings
 title: "Pacific Blog"
 description: > # this means to ignore newlines until "email:"
-  A Jekyll theme - Medium inspired
+  Um blog sobre tecnologia
 
 email: a-mail@mail.mail
 #blog logo
