--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author_image: "/assets/images/author.jpeg"
 
 paginate: 5
 
-url: "http://myblog.***.***" # the base hostname & protocol for your site
+url: "https://yannrocha.github.io" # the base hostname & protocol for your site
 baseurl: ""
 #used to display twitter cards
 twitter_handle: "@yann"
