--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ paginate: 5
 
 url: "https://yannrocha.github.io" # the base hostname & protocol for your site
 baseurl: ""
+permalink: /:title/
 #used to display twitter cards
 twitter_handle: "@yann"
 
