--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author_image: "/assets/images/author.jpeg"
 paginate: 5
 
 url: "https://yannrocha.github.io" # the base hostname & protocol for your site
-baseurl: ""
+baseurl: "/mediator"
 permalink: /:title/
 #used to display twitter cards
 twitter_handle: "@yann"
